[project]
name = "universal-ml-utils"
description = "Collection of utilities for machine learning projects"
version = "0.1.1"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["machine learning", "utilities"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

dependencies = [
    "pyyaml>=6.0",
    "termcolor>=2.4",
]

[project.urls]
Github = "https://github.com/bastiscode/universal-ml-utils"
